tests/fail/morphic_constraint_violation.stderr
tests/fail/morphic_constraint_violation.tk:8:19: error[E0416]: Unknown shape type 'i32'
